fix: rte - imgs   - runtime error when only img in article   - remember choosen align mode   - handle empty url

--- a/src/components/RichTextEditor/extensions/image/index.css
+++ b/src/components/RichTextEditor/extensions/image/index.css
@@ -23,23 +23,22 @@ figure.node-imageCustom {
   box-shadow: 0px 0px 15px 6px rgba(255, 255, 255, 0.1);
 }
 
-/* Вариант 1 fit ---------------------------------------------------------------
-  Без доп. класса, но не по умолчанию.
+/* Вариант 1 center ---------------------------------------------------------------
   Изображение принимает свой оригинальный размер, но не более ширины редактора.
 */
-.rte__node_img {
+.rte__node_img.center {
   width: fit-content;
   max-width: 100%;
 }
 
-.rte__node_img img {
+.rte__node_img.center img {
   width: auto;
   max-width: 100%;
 }
 /* ------------------------------------------------------------------------------ */
 
 /* Вариант 2 justify ---------------------------------------------------------------
-  С доп. классом, вариант по умолчанию.
+  Вариант по умолчанию.
   Изображение принимает ширину редактора.
 */
 .rte__node_img.justify {
